@@ -1,5 +1,5 @@
 AUX amarok-ipod.patch 5230 RMD160 d147223985dc8c45d0aaaad5008a4b2024159051 SHA1 d94aa98a17229b2ddbae4128021bdb727fb38202 SHA256 b119ba280bba29276ece49b3d80d8770aee831e9afcb1d8795811130b734994a
 DIST amarok-2.0.2.tar.bz2 4979989 RMD160 d9e7aa2e97c9a80450993aceebbbe1a6f0c301f3 SHA1 13bb7c71b27e88cad728f63c624af90111daeb5c SHA256 d13c0b6b058a8dfd86194c81f89365f69adc14f0e4e6ac82359135629caaf651
-EBUILD amarok-2.0.2.ebuild 2662 RMD160 20a0122e4e9d712327a43552f31b3ac44d7c8940 SHA1 66227fd570bedf9c79f560a1e60d345171b15807 SHA256 492d1263dd919049931a9a93cccd45a6df2d0628fbff41df8f46646f2ca87f0b
-MISC ChangeLog 362 RMD160 57e341906eb304dabec666452cbb4be4189e6ddc SHA1 af3deee49584110cdc21e16a177e824bd65b7a12 SHA256 4f4257629eb32b554e0bf0eb42d5f1d773925d7e446c1dea6e52dfc66fbe36fe
+EBUILD amarok-2.0.2.ebuild 2615 RMD160 7bf7e212c32381e7f0eda0d8740dd2b21a7800b8 SHA1 f34557f1ab2dd6d3fafa987522d91b5f1201147f SHA256 138b4a28c7596f3924d557f68c1c9be7d5a745f708d4bb005ead4aba4a03ee68
+MISC ChangeLog 512 RMD160 613858fba9afe8f0c90d59293f337dec77a05925 SHA1 ae94e03fbb4d924f71fa6cf4d42000209d2d5df3 SHA256 cbf59dbbe36c0ddf36d50fb00271883a3012d0f39e9bdeeb169bff57075deff6
 MISC metadata.xml 2111 RMD160 27d5395947be1230fe299e1bfd2c39a2c391944a SHA1 dfa479d20096c1d930e3606ea213bde600b0c86f SHA256 c70d4b86309dd709e1d075f6d315cc5f783487ca91a25447a715eb46a2a2d4ce
