@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Apr 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
+  media-sound/amarok/amarok-2.0.2.ebuild:
+  removed kdeprefix to follow kde-testing
+
 *amarok-2.0.2 (30 Mar 2009)
 
   30 Mar 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
